# hlslpp-cmake

./: CMakeLists.txt
include/: hlsl++_bitmask.h  hlsl++_common.h  hlsl++_dependent.h  hlsl++_matrix_float.h  hlsl++_matrix_float_type.h  hlsl++_quaternion.h  hlsl++_quaternion_type.h  hlsl++_type_traits.h  hlsl++_vector_double.h  hlsl++_vector_double_type.h  hlsl++_vector_float.h  hlsl++_vector_float8.h  hlsl++_vector_float_type.h  hlsl++_vector_int.h  hlsl++_vector_int_type.h  hlsl++_vector_uint.h  hlsl++_vector_uint_type.h
include/transform/: hlsl++_transform_common.h
src/: hlsl++_unit_tests.cpp  hlsl++_unit_tests.h  hlsl++_unit_tests_types_only.cpp
